Remove role levels in configs and small cleanups
(cherry picked from commit c3a8f9fe809ef1d8d14350c6d4a928ced1c8eee8)